# clipsmith

./: .gitignore  .python-version  README.md  dodo.py  pyproject.toml  tox.ini
clipsmith/: __init__.py  _ffmpeg.py  clip.py  context.py  profile.py  profiles.py  video.py
clipsmith/cli/: __main__.py  main.py
clipsmith/clip/: __init__.py  clip.py  operation.py
clipsmith/video/: base.py  raw.py
doc/cli/: forge.md
test/: conftest.py  test_cli.py  test_clip.py  test_video.py
