[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.poetry]
authors = ["mm21 <mm21.dev@gmail.com>"]
classifiers = [
  # Get the list of trove classifiers here: https://pypi.org/classifiers/
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 1 - Planning",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License"
]
name = "clipsmith"
packages = [{include = "clipsmith"}]
version = "0.1.0"
description = "Utility to work with video clips, especially suited for creating timelapses from dashcam footage"
homepage = "https://github.com/mm21/clipsmith"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.14.0"
pydantic = "^2.10.2"
doit = "^0.36.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
doit = "^0.36.0"
pytest = "^8.3.3"
autoflake = "^2.3.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
toml-sort = "^0.24.2"
